change import model name, fix quick bug
